<resources>
    <string name="app_name">CHECKapp</string>
    <string name="diagnose">Diagnose</string>
    <string name="description_logo">logo</string>
    <string name="stats">Statistics</string>
    <string name="loading">Testing...</string>
    <string name="unhealthy">Call a doc!</string>
    <string name="healthy">All seems good!</string>
    <string name="custom">Custom Diagnostic</string>
    <string name="select_request">Please, select the checks you wish to perform.</string>
    <string name="basic_checkup">Basic Checkup (Temperature, Heartbeat, Blood pressure, Breath rate)</string>
    <string name="eeg">EEG</string>
    <string name="ecg">ECG</string>
    <string name="info">i</string>
    <string name="hint">Temperature, Heartbeat, Blood pressure, Breath rate</string>
    <string name="daily">Daily Check-up</string>
    <string name="weekly">Weekly Check-up</string>
    <string name="custom_check">Custom..</string>
    <string name="pick">What are we going for today?</string>
    <string name="title_activity_profile_selection">ProfileSelection</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="new_profile">New Profile</string>
    <string name="name">Name</string>
    <string name="Age" />
    <string name="sex_hehe">Sex</string>
    <string name="age">Age</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="prev_dis">Previous Diseases (check all that apply)</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="aids">AIDS</string>
    <string name="finish">Finish</string>
    <string name="hiv">HIV</string>
    <string name="asthma">Asthma</string>
    <string name="epilepsy">Epilepsy</string>
    <string name="uploadPic">Choose from gallery</string>

    <string name="question1">How often have you felt chills lately?</string>
    <string name="question2">How often do you feel fatigued?</string>
    <string name="insert_electrodes">Insert the electrodes as pictured.</string>
    <string name="everyday">Everyday</string>
    <string name="never">Never</string>

    <!-- permission check dialog -->
    <string name="permission_check_dialog_title">This app needs location access</string>
    <string name="permission_check_dialog_message">Please grant location access so this app can detect PLUX\'s Bluetooth devices</string>
    <string name="permission_check_dialog_positive_button">OK</string>

    <!-- permission denied dialog -->
    <string name="permission_denied_dialog_title">Functionality limited</string>
    <string name="permission_denied_dialog_message">Since location access has no been granted, this app will not be able to discover bluetooth devices.</string>
    <string name="permission_denied_dialog_positive_button">OK</string>
    <string name="neurologic">Neurologic</string>
    <string name="nervous_muscular">Nervous-Muscular</string>
    <string name="fitness">Fitness</string>
    <string name="cardio_respiratory">Cardio-Respiratory</string>
    <string name="register_details">Register Details</string>
    <string name="bpm">BPM</string>
    <string name="breath_rate">Breath Rate</string>
    <string name="bmi">BMI</string>
    <string name="body_fat">Body Fat</string>
    <string name="question3">How often have you been bothered by feeling down, depressed, irritable, or hopeless over the last two weeks?</string>
    <string name="question5">How often have you been bothered by trouble falling asleep, staying asleep, or sleeping too much over the last two weeks?</string>
    <string name="question4">How often have you been bothered that you have little interest or pleasure in doing things over the last two weeks?</string>
    <string name="question6">How often have you been bothered that you have poor appetite, weight loss, or overeating over the last two weeks?</string>
    <string name="question7">How often have you been bothered by feeling tired, or having little energy over the last two weeks?</string>
    <string name="question8">How often have you been bothered by feeling bad about yourself – or feeling that you are a failure, or that you have let yourself or your family down over the last two weeks?</string>
    <string name="question9">How often have you been bothered that you have trouble concentrating on things like school work, reading, or watching TV over the last two weeks?</string>
    <string name="question10">How often have you been bothered by moving or speaking so slowly that other people could have noticed? Or the opposite – being so fidgety or restless that you were moving around a lot more than usual over the last two weeks?</string>
    <string name="question11">How often have you been bothered by thoughts that you would be better off dead, or of hurting yourself in some way over the last two weeks?</string>
    <string name="question12">How often have you been bothered by feeling nervous, anxious or on edge over the last two weeks?</string>
    <string name="holdtemp">Now, hold the temperture sensor.</string>

</resources>