<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question2"
        android:textSize="30sp"
        android:padding="10sp"
        android:layout_marginTop="200dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/never"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            >
        </RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            >
        </RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            >
        </RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            >
        </RadioButton>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyday">
        </RadioButton>

    </RadioGroup>

</RelativeLayout>