<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Question1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="297dp"
        android:layout_height="256dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-4dp"
        android:src="@drawable/edge_inverted" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeMaxTextSize="30dp"
        android:autoSizeStepGranularity="2sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-6dp"
        android:layout_marginLeft="-6dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:background="@color/colorPrimary"
        android:padding="10sp"
        android:text="@string/question12"
        android:textColor="@color/colorPrimaryDark" />

    <RadioGroup
        android:id="@+id/radioGroupFatigue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/radio_group_vertical_centre"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        >

        <RadioButton
            android:id="@+id/never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/never"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:onClick="checkButton"
            >
        </RadioButton>

        <RadioButton
            android:id="@+id/almost_never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton">
        </RadioButton>

        <RadioButton
            android:id="@+id/sometimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton">
        </RadioButton>

        <RadioButton
            android:id="@+id/almost_always"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton">
        </RadioButton>

        <RadioButton
            android:id="@+id/always"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyday"
            android:onClick="checkButton">
        </RadioButton>

    </RadioGroup>

</RelativeLayout>