<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Question1">

    <TextView
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="35dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:padding="10sp"
        android:text="@string/question1"
        android:textSize="30sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="-3dp"
        android:layout_marginRight="35dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/never"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:onClick="checkButton"
            >
        </RadioButton>

        <RadioButton
            android:id="@+id/almost_never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton">
        </RadioButton>

        <RadioButton
            android:id="@+id/sometimes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton">
        </RadioButton>

        <RadioButton
            android:id="@+id/almost_always"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton">
        </RadioButton>

        <RadioButton
            android:id="@+id/always"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyday"
            android:onClick="checkButton">
        </RadioButton>

    </RadioGroup>

    <ImageButton
        android:id="@+id/imageButton2"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="358dp"
        android:background="@color/colorPrimary"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="358dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="297dp"
        android:layout_height="256dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="-4dp"
        android:src="@drawable/edge_inverted" />

</RelativeLayout>